Modified Example1 to dynamically recolour the object's texture

--- a/Copperscript/Example1/index.html
+++ b/Copperscript/Example1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div align="center">
-		<b>Copperscript example #1</b><br/>
+		<h1>Press any key to generate a dynamic texture</h1><br/>
 		<canvas id="3darea" width="640" height="480" style="background-color:#000000">
 		</canvas>
 	</div>
